2006-01-15  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	A data/french.desktop.in
	A data/spanish.desktop.in

	* data/french.desktop.in: add a source definition file for a
	French-based dictionary source.

	* data/spanish.desktop.in: add a source definition file for a
	Spanish-based dictionay source.

	* data/Makefile.am: add the two new dictionary sources.

2006-01-13  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-applet.c (gdict_applet_init), (gdict_applet_factory):
	move the menu items sensitivity set inside the applet's factory; this
	should close bug #326004 which was triggered if there was a delay
	in the creation of the bonobo ui control.

2006-01-13  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-applet.c (gdict_applet_set_menu_sensitive),
	(gdict_applet_lookup_start_cb), (gdict_applet_lookup_end_cb),
	(gdict_applet_error_cb), (gdict_applet_init): add a function
	to make the menu items sensitive.

	* src/gdict-applet.c (gdict_applet_style_set): re-compute the
	definition window size request depending on the font size at every
	style change.

	* src/gdict-applet.c (gdict_applet_draw), (gdict_applet_init),
	(gdict_applet_build_window): remove the warnings (they wouldn't be
	displayed anyway) and use error dialogs; mark new strings as
	translatable; add tooltips for the applet widgets.

2006-01-12  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/Makefile.am: fixed the enum generation.

2006-01-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* data/GNOME_DictionaryApplet.xml: change the mnemonic for the "Clear"
	verb.

	* src/gdict-applet.c (gdict_applet_lookup_end_cb),
	(gdict_applet_error_cb), (gdict_applet_init): check before changing the
	menu items' sensivity; this should fix the crasher in bug #326004.

2006-01-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* data/gnome-dictionary.schemas.in: add the new window state keys:
		default-window-height
		default-window-width
		window-is-maximized