@@ -1,3 +1,13 @@
+2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* libgdict/gdict-context.c
+	* libgdict/gdict-client-context.c
+	* libgdict/gdict-defbox.c: use the new and faster g_slice_* calls from
+	GLib HEAD in place of g_new.
+
+	* libgdict/gdict-context.c: add the gtk-doc markings to the last
+	missing functions.
+
 2006-01-15  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	A data/french.desktop.in
